--- a/Requirements.txt
+++ b/Requirements.txt
@@ -2,13 +2,10 @@ absl-py==0.11.0
 astor==0.8.1
 astunparse==1.6.3
 async-generator==1.10
-attrs @ file:///tmp/build/80754af9/attrs_1604765588209/work
 backcall==0.2.0
-bleach @ file:///tmp/build/80754af9/bleach_1600439572647/work
 cachetools==4.2.0
 certifi==2020.12.5
 chardet==4.0.0
-colorama @ file:///tmp/build/80754af9/colorama_1607707115595/work
 cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
@@ -20,16 +17,8 @@ google-pasta==0.2.0
 grpcio==1.34.0
 h5py==2.10.0
 idna==2.10
-importlib-metadata @ file:///tmp/build/80754af9/importlib-metadata_1602276842396/work
-ipykernel @ file:///C:/ci/ipykernel_1596206775157/work/dist/ipykernel-5.3.4-py3-none-any.whl
-ipython @ file:///C:/ci/ipython_1593446240034/work
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
 jedi==0.17.0
 Jinja2==2.11.2
-jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1601311786391/work
-jupyter-core @ file:///C:/ci/jupyter_core_1606149071529/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
 Keras==2.2.4
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
@@ -39,29 +28,17 @@ MarkupSafe==1.1.1
 matplotlib==3.3.3
 mistune==0.8.4
 mock==4.0.3
-nbclient @ file:///tmp/build/80754af9/nbclient_1602783176460/work
-nbconvert @ file:///C:/ci/nbconvert_1601896775581/work
-nbformat @ file:///tmp/build/80754af9/nbformat_1602783287752/work
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1606153767164/work
 notebook==6.0.0
 numpy==1.19.1
 oauthlib==3.1.0
-# opencv-python==4.1.1.26
+opencv-python==4.1.1.26
 opencv-python
 opt-einsum==3.3.0
-packaging @ file:///tmp/build/80754af9/packaging_1607971725249/work
-pandocfilters @ file:///C:/ci/pandocfilters_1605120535071/work
-parso @ file:///tmp/build/80754af9/parso_1607623074025/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
 Pillow==8.0.1
-prometheus-client @ file:///tmp/build/80754af9/prometheus_client_1606344362066/work
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1602688806899/work
 protobuf==3.14.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-Pygments @ file:///tmp/build/80754af9/pygments_1607368905949/work
 pyparsing==2.4.7
-pyrsistent @ file:///C:/ci/pyrsistent_1600141799440/work
 python-dateutil==2.8.1
 pywin32==227
 pywinpty==0.5.7
@@ -71,8 +48,6 @@ requests==2.25.1
 requests-oauthlib==1.3.0
 rsa==4.6
 scipy==1.4.1
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1607525499227/work
-six @ file:///C:/ci/six_1605187303045/work
 tensorboard==1.13.1
 tensorboard-plugin-wit==1.7.0
 tensorflow==1.13.1
@@ -80,12 +55,9 @@ tensorflow-estimator==1.13.0
 termcolor==1.1.0
 terminado==0.9.1
 testpath==0.4.4
-tornado @ file:///C:/ci/tornado_1606942379977/work
 traitlets==4.3.3
 urllib3==1.26.2
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
 webencodings==0.5.1
 Werkzeug==1.0.1
 wincertstore==0.2
 wrapt==1.12.1
-zipp @ file:///tmp/build/80754af9/zipp_1604001098328/work
